# TestSILAdapter

./: .gitignore
SUT_Cpp/: CMakeLists.txt
SUT_Cpp/Application_Build/: SilAdapterBasic.sln
SUT_Cpp/Application_Build/Application_C/: Application_C.vcxproj  Application_C.vcxproj.filters
SUT_Cpp/Application_Build/Application_Cpp/: Application_Cpp.vcxproj
SUT_Cpp/Application_Build/TypeLib/: TypeLib.vcxproj  TypeLib.vcxproj.filters
SUT_Cpp/Application_C/: CMakeLists.txt
SUT_Cpp/Application_C/TypeLibWrapper/: TypeLibWrapper.cpp  TypeLibWrapper.h
SUT_Cpp/Application_C/src/: IO.c  IO.h  Logic.c  Logic.h  main.c
SUT_Cpp/Application_Cpp/: CMakeLists.txt
SUT_Cpp/Application_Cpp/src/: IO.cpp  Logic.cpp  main.cpp
SUT_Cpp/SilAdapter/: .sab-manifest  CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/: .cla-version  CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/Cla/: CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/Cla/Cla/: CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/Cla/Cla/include/cla/: ClaSil.hpp  DataTypes.hpp  IClaService.hpp  IClaServiceSil.hpp  IConsumerCallContext.hpp  IDo.hpp  IDoMember.hpp  IDoMethod.hpp  IValueEntity.hpp
SUT_Cpp/SilAdapter/Dependencies/Cla/Cla/src/: CallContext.cpp  CallContext.hpp  ClaService.cpp  ClaService.hpp  ClaSil.cpp  ConsumerCallContext.cpp  ConsumerCallContext.hpp  Deserializer.cpp  Deserializer.hpp  DistSimIBHelper.cpp  DistSimIBHelper.hpp  Do.cpp  Do.hpp  DoConsumedData.cpp  DoConsumedData.hpp  DoConsumedEvent.cpp  DoConsumedEvent.hpp  DoConsumedField.cpp  DoConsumedField.hpp  DoConsumedMethod.cpp  DoConsumedMethod.hpp  DoData.cpp  DoData.hpp  DoEvent.cpp  DoEvent.hpp  DoField.cpp  DoField.hpp  DoMember.cpp  DoMember.hpp  DoMethod.cpp  DoMethod.hpp  DoProvidedData.cpp  DoProvidedData.hpp  DoProvidedEvent.cpp  DoProvidedEvent.hpp  DoProvidedField.cpp  DoProvidedField.hpp  DoProvidedMethod.cpp  DoProvidedMethod.hpp  DoRegistry.cpp  (+11 more)
SUT_Cpp/SilAdapter/Dependencies/Cla/ClaDi/: CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/Cla/ClaDi/include/ClaDi/: ServiceFactory.hpp
SUT_Cpp/SilAdapter/Dependencies/Cla/ClaDi/source/: ServiceFactory.cpp
SUT_Cpp/SilAdapter/Dependencies/Cla/ClaExperimental/: CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/Cla/ClaExperimental/include/cla/: ClaExperimental.hpp  IClaServiceExperimental.hpp
SUT_Cpp/SilAdapter/Dependencies/Cla/ClaExperimental/src/: ClaExperimental.cpp  ClaServiceExperimental.cpp  ClaServiceExperimental.hpp
SUT_Cpp/SilAdapter/Dependencies/DistSimAdapter/: CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/DistSimAdapter/include/distSim/: IDistSimIB.h  IServices.h  RTFederateDataTypes.h  RTFederateEncodings.h  RTFederateObjectDT.h
SUT_Cpp/SilAdapter/Dependencies/DistSimAdapter/src/: AbstractService.h  BusService.cpp  BusService.h  DOService.cpp  DOService.h  DistSimIB.cpp  DistSimIB.h  DistSimIBConfig.h  EventNotification.cpp  EventNotification.h  FOMDefinitions.h  RTFederateEncodings.cpp  RTFederateEncodings.h  RTFederateFOM.inc  RTFederateObjectEncodings.h  RemoteAmbassador.cpp  RemoteAmbassador.h  TextLogService.cpp  TextLogService.h  TimingService.cpp  TimingService.h  UUIDT4.cpp  UUIDT4.h  UserTimer.cpp  UserTimer.h  Utils.cpp  Utils.h
SUT_Cpp/SilAdapter/Dependencies/SabSerDes/include/: CMakeLists.txt
SUT_Cpp/SilAdapter/Dependencies/SabSerDes/include/SabSerDes/: Deserializer.hpp  SerializationHeader.hpp  Serializer.hpp
SUT_Cpp/SilAdapter/TypeLib/: CMakeLists.txt
SUT_Cpp/SilAdapter/TypeLib/include/TypeLib/: Accessor.hpp  Deserializer.hpp  DistributedObjectBase.hpp  DoConsumedData.hpp  DoConsumedEvent.hpp  DoConsumedField.hpp  DoData.hpp  DoEvent.hpp  DoField.hpp  DoProvidedData.hpp  DoProvidedEvent.hpp  DoProvidedField.hpp  Panel.hpp  RoomTemperatureControl.hpp  Serializer.hpp  TypeLib.hpp
SUT_Cpp/SilAdapter/TypeLib/include/TypeLib/Panel/: Panel_Types.hpp  _Internal.hpp
SUT_Cpp/SilAdapter/TypeLib/include/TypeLib/Panel/_Internal/: _Internal_Types.hpp
SUT_Cpp/SilAdapter/TypeLib/include/TypeLib/RoomTemperatureControl/: IHeating.hpp  ISensor.hpp
SUT_Cpp/SilAdapter/TypeLib/src/: DistributedObjectBase.cpp  Panel.cpp  Path.cpp  Path.hpp  RoomTemperatureControl.cpp  TypeLib.cpp
SUT_Cpp/SilAdapter/TypeLib/src/Panel/: Panel_Initialization.cpp  Panel_Initialization.hpp  _Internal.cpp
SUT_Cpp/SilAdapter/TypeLib/src/Panel/_Internal/: _Internal_Initialization.cpp  _Internal_Initialization.hpp
SUT_Cpp/SilAdapter/TypeLib/src/RoomTemperatureControl/: IHeating.cpp  ISensor.cpp  RoomTemperatureControl_Initialization.cpp  RoomTemperatureControl_Initialization.hpp
