add_library(SabSerDes INTERFACE)
target_include_directories(SabSerDes INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
  $<INSTALL_INTERFACE:include>
)

install(
    TARGETS SabSerDes
    EXPORT SabSerDesTargets
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

install(DIRECTORY SabSerDes DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
